# offramp

./: .gitmodules  FAQ.md  README.md  agent-communication.md  blueprint-standard.md  proposal-kv-db.md
.claude/: settings.json
about/: agent-session-bootstrap.md  onboarding.md  prd.md
cli/: AGENTS.md  Cargo.toml  README.md  build.rs  calypso-cli-implementation-plan.md  lcov.info  spec.md
cli/.cargo/: config.toml
cli/scripts/: codex-worktree-loop.sh  install.sh
cli/src/: app.rs  blueprint_workflows.rs  claude.rs  codex.rs  doctor.rs  driver.rs  execution.rs  feature_start.rs  github.rs  init.rs  lib.rs  main.rs  policy.rs  pr_checklist.rs  report.rs  runtime.rs  state.rs  telemetry.rs  template.rs  tui.rs  workflows.rs
cli/templates/default/: agents.yml  prompts.yml  state-machine.yml
cli/tests/: agent_reporting.rs  app.rs  claude.rs  cli.rs  codex.rs  doctor.rs  driver.rs  e2e.rs  e2e_mock_claude.rs  feature_start.rs  github.rs  init.rs  phony_template.rs  report.rs  runtime.rs  state.rs  state_release.rs  state_v2.rs  telemetry.rs  templates.rs  tui.rs
cli/tests/fixtures/phony-template/.calypso/: agents.yml  prompts.yml  state-machine.yml
cli/tests/helpers/: fake_claude.rs
docs/: DEVELOPMENT.md  framework.md  onboarding.md  prd.md
k8s/: ingress.yaml  namespace.yaml  network-policy.yaml
prompts/: blueprint-standard.md  calypso-blueprint.md  development-standards.md  documentation-standard.md  git-standards.md  hardening.md  scaffold-task.md  ux-blueprint.md
scripts/: bootstrap-standards.sh  provision-cluster.sh  setup-ai-hooks.sh  (+1 more)
(+98 files in other folders)
