[package]
name = "calypso-cli"
version = "0.1.0"
edition = "2024"
build = "build.rs"
default-run = "calypso-cli"

[dependencies]
crossterm = "0.26.1"
regex-lite = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

[lib]
name = "calypso_cli"
path = "src/lib.rs"

[[bin]]
name = "calypso-cli"
path = "src/main.rs"

# coverage-driver is disabled for releases (test-only utility)
[[bin]]
name = "coverage-driver"
path = "src/bin/coverage_driver.rs"
required-features = ["__dev_only"]

[features]
__dev_only = []
